--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,24 +1,51 @@
+@import "variables";
+@import "fancy-links";
+@import "box";
+@import "rounded";
+@import "warning";
+@import "large-text";
+
+@include fancy-links;
+
 body {
-  font-family: sans-serif;
-  background-color: green;
+  font-family: $text-font;
+  color: $text-color;
 }
 
 h1, h2, h3, h4 {
+  font-family: $headline-front;
+}
 
+h2 {
+  @include large-text;
 }
 
 p {
-
+  font-family: $text-font;
 }
 
 a {
+  color: $link-color;
+}
 
+.warning-button {
+  @include warning;
+  padding: 8px 12px;
 }
 
 #header {
+  @include box;
+  height: $header-height;
+  background-color: $theme-color;
 
   #main-menu {
+    li {
+      display:inline;
+    }
 
+    a {
+      color: $menu-item-color;
+    }
   }
 
   #logo {
@@ -27,6 +54,9 @@ a {
 }
 
 #main {
+  width: $content-width;
+  margin-left: auto;
+  margin-right: auto;
 
   #content {
   }
@@ -36,5 +66,6 @@ a {
 }
 
 #footer {
-
+  height: $footer-height;
+  background-color: $ternary-color;
 }
