--- a/scss/main.compact.css
+++ b/scss/main.compact.css
@@ -12,7 +12,7 @@ a { color: #f27731; }
 
 .warning-button { background-color: orange; color: #fff; padding: 8px 12px; }
 
-#header { border-radius: 6px; border: 1px solid #333; height: 60px; background-color: #170a48; }
+#header { border-radius: 8px; border: 1px solid #999; box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731; -moz-box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731; -webkit-box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731; height: 60px; background-color: #170a48; }
 
 #header #main-menu li { display: inline; }
 
