--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,5 @@
 @import "variables";
-@import "fancy-links";
-@import "box";
-@import "rounded";
-@import "warning";
-@import "large-text";
+@import "mixins";
 
 @include fancy-links;
 
@@ -34,7 +30,8 @@ a {
 }
 
 #header {
-  @include box;
+  @include box(8px, 1px solid #999);
+  @include box-shadow(2px 0px 4px #999, 1px 1px 6px $secondary-color);
   height: $header-height;
   background-color: $theme-color;
 
